--- a/src/app/pages/add-property/step-1/step1-4-1-where/step1-4-1-where.html
+++ b/src/app/pages/add-property/step-1/step1-4-1-where/step1-4-1-where.html
@@ -3,7 +3,8 @@
     <header class="location-header">
       <h1 class="location-title">Where's your place located?</h1>
       <p class="location-subtitle">
-        Your address is only shared with guests after they’ve made a reservation.
+        Your address is only shared with guests after they’ve made a
+        reservation.
       </p>
     </header>
 
@@ -28,18 +29,28 @@
               aria-expanded="false"
               autocomplete="off"
               [(ngModel)]="address"
-              (ngModelChange)="onAddressChange($event)"
               name="address"
             />
-            <button type="button" class="get-location-btn" (click)="getCurrentLocation()">
-              <svg viewBox="0 0 24 24" width="24" height="24" fill="currentColor">
-                <path d="M12 8c-2.21 0-4 1.79-4 4s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4zm8.94 3A8.994 8.994 0 0013 3.06V1h-2v2.06A8.994 8.994 0 003.06 11H1v2h2.06A8.994 8.994 0 0011 20.94V23h2v-2.06A8.994 8.994 0 0020.94 13H23v-2h-2.06zM12 19c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7z"/>
+            <button type="button" class="get-location-btn">
+              <svg
+                viewBox="0 0 24 24"
+                width="24"
+                height="24"
+                fill="currentColor"
+              >
+                <path
+                  d="M12 8c-2.21 0-4 1.79-4 4s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4zm8.94 3A8.994 8.994 0 0013 3.06V1h-2v2.06A8.994 8.994 0 003.06 11H1v2h2.06A8.994 8.994 0 0011 20.94V23h2v-2.06A8.994 8.994 0 0020.94 13H23v-2h-2.06zM12 19c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7z"
+                />
               </svg>
             </button>
           </div>
         </form>
       </div>
-      <div #mapContainer class="google-map"></div>
+      <!-- <div #mapContainer class="google-map"></div> -->
+
+      <div class="map-panel" [class.loading]="isMapLoading">
+        <div #mapContainer id="leaflet-map" class="leaflet-map"></div>
+      </div>
     </div>
   </main>
 </div>
