--- a/src/app/pages/add-property/step-1/step1-4-1-where/step1-4-1-where.css
+++ b/src/app/pages/add-property/step-1/step1-4-1-where/step1-4-1-where.css
@@ -140,3 +140,28 @@ html {
   width: 20px;
   height: 20px;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.leaflet-map {
+  height: 800px !important;
+  width: 800px !important;
+  border-radius: 12px;
+  z-index: 1;
+}
