--- a/src/app/pages/home/components/slider-card/slider-card.html
+++ b/src/app/pages/home/components/slider-card/slider-card.html
@@ -16,7 +16,7 @@
 
 <div
   class="card border-0 rounded rounded-2 cursor-pointer"
- (click)="onCardClick()" 
+  (click)="onCardClick()"
 >
   <div class="image-container position-relative">
     <img
@@ -30,24 +30,20 @@
     >
       Guest favorite
     </div>
-    <button class="bi text-success position-absolute top-0 end-0 m-2"
-      [ngClass]="{
-        'bi-heart':!isFavorite,
-        'bi-heart-fill':isFavorite,
-      }"
-      
-      (click)="onWishlistClick($event)">
-      <div
-      >
-      <!-- xmlns="http://www.w3.org/2000/svg" -->
-        <!-- <svg
+    <button
+      class="bi text-success position-absolute top-0 end-0 m-2"
+      (click)="onWishlistClick($event)"
+    >
+      <div>
+        <!-- xmlns="http://www.w3.org/2000/svg" -->
+        <svg
           viewBox="0 0 32 32"
           aria-hidden="true"
           role="presentation"
           focusable="false"
+          [style.fill]="isFavorite ? '#ff385c' : 'rgba(0, 0, 0, 0.5)'"
           style="
             display: block;
-            fill: rgba(0, 0, 0, 0.5);
             height: 24px;
             width: 24px;
             stroke: white;
@@ -58,7 +54,7 @@
           <path
             d="M16 28c7-4.73 14-10 14-17a6.98 6.98 0 0 0-7-7c-1.8 0-3.58.68-4.95 2.05L16 8.1l-2.05-2.05a6.98 6.98 0 0 0-9.9 0A6.98 6.98 0 0 0 2 11c0 7 7 12.27 14 17z"
           ></path>
-        </svg> -->
+        </svg>
       </div>
     </button>
   </div>
