--- a/src/app/components/calendar/calendar.css
+++ b/src/app/components/calendar/calendar.css
@@ -273,6 +273,7 @@
   position: relative;
   background: white;
   min-height: 40px;
+
 }
 
 .day-number {
@@ -318,6 +319,7 @@
 .day-cell.selected .day-number {
   color: white;
 }
+
 .day-cell.selected:hover .day-number {
   color: black;
 }
@@ -386,4 +388,17 @@
 .apply-btn:focus {
   outline: 2px solid #ff385c;
   outline-offset: 2px;
+}
+
+.nav-btn:disabled {
+  cursor: not-allowed;
+  color: #717171;
+}
+
+.nav-btn:disabled:hover {
+  cursor: not-allowed;
+  color: #717171;
+
+  background: white;
+  border-color: #ddd;
 }
