--- a/src/app/components/calendar/calendar.html
+++ b/src/app/components/calendar/calendar.html
@@ -102,7 +102,7 @@
     <ng-container *ngIf="settings.viewType === 'month'">
       <div class="single-month">
         <div class="month-navigation">
-          <button class="nav-btn" (click)="previousMonth()">
+          <button class="nav-btn" [disabled]="!canGoToPreviousMonth" (click)="previousMonth()">
             <svg
               viewBox="0 0 24 24"
               fill="none"
@@ -118,7 +118,7 @@
             >1 discount</span
           >
 
-          <button class="nav-btn" (click)="nextMonth()">
+          <button class="nav-btn" [disabled]="!canGoToNextMonth" (click)="nextMonth()">
             <svg
               viewBox="0 0 24 24"
               fill="none"
