--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -42,9 +42,7 @@
 
       <!-- Right-aligned items -->
       <div class="d-flex align-items-center position-relative">
-        <a
-          class="switch-to-hosting-btn d-none d-lg-block"
-          routerLink="/host"
+        <a class="switch-to-hosting-btn d-none d-lg-block" routerLink="/host"
           >{{ "HEADER.SWITCH_TO_HOSTING" | translate }}</a
         >
         <div class="dropdown" [ngClass]="{ show: dropdownOpen }">
@@ -75,6 +73,15 @@
             }"
             (animationend)="onAnimationEnd()"
           >
+            <li>
+              <a
+                class="dropdown-item d-flex align-items-center gap-2"
+                href="hostsettings/availability"
+              >
+                <i class="bi bi-door-open"></i>
+                Become a Host
+              </a>
+            </li>
             <li>
               <a
                 class="dropdown-item d-flex align-items-center gap-2"
@@ -193,7 +200,7 @@
               <a
                 class="dropdown-item d-flex align-items-center gap-2"
                 routerLink="/host"
-              > 
+              >
                 <i class="bi bi-house-door-fill"></i>{{
                 "HEADER.AIRBNB_YOUR_HOME" | translate }}
               </a>
@@ -214,7 +221,10 @@
     </div>
   </nav>
 
-  <div class="container-fluid d-flex justify-content-center"   *ngIf="!isMessagesRoute">
+  <div
+    class="container-fluid d-flex justify-content-center"
+    *ngIf="!isMessagesRoute"
+  >
     <div
       class="search-bar-container d-flex align-items-center justify-content-center"
     >
