--- a/src/app/components/host-header/host-header.css
+++ b/src/app/components/host-header/host-header.css
@@ -62,13 +62,13 @@
   background-color: #f7f7f7;
 }
 
-.user-menu {
+/* .user-menu {
   display: flex;
   align-items: center;
   gap: 1rem;
-}
+} */
 
-.menu-button {
+/* .menu-button {
   background: none;
   border: none;
   font-weight: 500;
@@ -82,9 +82,9 @@
 
 .menu-button:hover {
   background-color: #f7f7f7;
-}
+} */
 
-.icon-user {
+/* .icon-user {
   background-color: #222;
   color: #fff;
   border-radius: 50%;
@@ -97,3 +97,88 @@
   font-weight: bold;
   cursor: pointer;
 }
+ */
+
+
+
+
+.user-menu-button {
+  border: 1px solid var(--border-color);
+  border-radius: 9999px;
+  padding: 6px ;
+  transition: box-shadow 0.2s ease-in-out;
+  background-color: var(--bg-color);
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+
+.user-menu-button:hover {
+  box-shadow: 0 2px 4px var(--shadow-color);
+}
+
+.user-menu-button .icon-menu {
+  color: var(--secondary-text-color);
+}
+
+.user-menu-button .icon-user {
+  background-color: var(--primary-text-color);
+  color: var(--bg-color);
+  border-radius: 50%;
+  padding: 4px;
+  height: 32px;
+  width: 32px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.user-menu-dropdown {
+  right: 0 !important;
+  left: auto !important;
+  margin-top: 0.5rem;
+  transform: translateX(0%) !important;
+  min-width: 200px;
+  max-width: calc(100vw - 16px);
+  /* overflow: hidden; */
+  background-color: var(--active);
+  min-height: 240px !important;
+  z-index: 10000!important;
+}
+.menu-dropdown{
+ background-color: var(--active);
+ width: 100%;
+}
+.menu-dropdown:hover{
+  background-color: transparent !important;
+}
+
+.dropdown-item {
+  color: var(--primary-text-color);
+}
+.dropdown-item:hover {
+  color: #000;
+}
+.dropdown-item:active {
+  background-color: var(--airbnb-red);
+}
+.dropdown-item.active {
+  background-color: var(--airbnb-red) !important;
+  color: #f7f7f7;
+}
+.icon-small {
+  width: 18px;
+  height: 18px;
+  stroke-width: 2;
+  fill: none;
+  stroke: currentColor;
+}
+
+.icon-medium {
+  width: 24px;
+  height: 24px;
+  stroke-width: 1.5;
+  fill: none;
+  stroke: currentColor;
+}
+
