--- a/src/app/pages/availability-page/availability-page.css
+++ b/src/app/pages/availability-page/availability-page.css
@@ -33,7 +33,7 @@
   flex: 1;
   /* max-width: 400px; */
   max-width: 300px;
-  background-color: pink;
+  /* background-color: pink; */
   /* border-left: 1px solid #e9ecef; */
   border-top: 1px solid #eee;
   border-left: 1px solid #eee;
