--- a/src/app/components/host-header/host-header.html
+++ b/src/app/components/host-header/host-header.html
@@ -49,8 +49,179 @@
     </ul>
 
     <!-- Right: User Menu -->
-    <div class="user-menu">
-      <div class="icon-user">M</div>
+    <div class="d-flex align-items-center position-relative">
+      <div class="dropdown" [ngClass]="{ show: dropdownOpen }">
+        <button
+          class="user-menu-button"
+          type="button"
+          id="userMenuButton"
+          (click)="toggleDropdown()"
+          aria-expanded="false"
+        >
+          <svg
+            class="icon-medium icon-menu"
+            viewBox="0 0 24 24"
+            stroke-width="1.5"
+          >
+            <path d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
+          </svg>
+          <div class="icon-user">M</div>
+        </button>
+
+        <ul
+          #dropdownMenu
+          class="dropdown-menu dropdown-menu-end user-menu-dropdown animate__animated"
+          [ngClass]="{
+              animate__fadeIn: dropdownOpen,
+              animate__fadeOut: dropdownClosing,
+              show: dropdownOpen || dropdownClosing
+            }"
+          (animationend)="onAnimationEnd()"
+        >
+          <li>
+            <a
+              class="dropdown-item d-flex align-items-center gap-2"
+              href="hostsettings/availability"
+            >
+              <i class="bi bi-door-open"></i>
+              Become a Host
+            </a>
+          </li>
+          <li>
+            <a
+              class="dropdown-item d-flex align-items-center gap-2"
+              routerLink="/WishLists"
+            >
+              <div>
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 32 32"
+                  aria-hidden="true"
+                  role="presentation"
+                  focusable="false"
+                  style="
+                    display: block;
+                    fill: black;
+                    height: 20px;
+                    width: 20px;
+                    stroke: black;
+                    stroke-width: 1;
+                    overflow: visible;
+                  "
+                >
+                  <path
+                    d="M16 28c7-4.73 14-10 14-17a6.98 6.98 0 0 0-7-7c-1.8 0-3.58.68-4.95 2.05L16 8.1l-2.05-2.05a6.98 6.98 0 0 0-9.9 0A6.98 6.98 0 0 0 2 11c0 7 7 12.27 14 17z"
+                  ></path>
+                </svg>
+              </div>
+              WishLists
+            </a>
+          </li>
+          <li>
+            <a
+              class="dropdown-item d-flex align-items-center gap-2"
+              href="Messages"
+            >
+              <i class="bi bi-chat"></i>
+              Messages
+            </a>
+          </li>
+          <li>
+            <a
+              class="dropdown-item d-flex align-items-center gap-2"
+              href="#"
+              (click)="openRegisterDialog()"
+            >
+              <i class="bi bi-person-plus"></i>
+              {{ "HEADER.SIGN_UP" | translate }}
+            </a>
+          </li>
+
+          <li>
+            <a
+              class="dropdown-item d-flex align-items-center gap-2"
+              href="#"
+              (click)="openLoginDialog()"
+            >
+              <i class="bi bi-box-arrow-in-right"></i>
+              {{ "HEADER.LOGIN" | translate }}
+            </a>
+          </li>
+
+          <li><hr class="dropdown-divider" /></li>
+
+          <li
+            class="dropdown-item d-flex align-items-center gap-2"
+            style="cursor: pointer;"
+            (click)="toggleTheme()"
+          >
+            <i class="bi" [ngClass]="isDarkMode ? 'bi-sun' : 'bi-moon'"></i>
+            {{ isDarkMode ? ("HEADER.DARK_MODE" | translate) :
+            ("HEADER.LIGHT_MODE" | translate) }}
+          </li>
+
+          <li
+            class="dropdown-item d-flex align-items-center gap-2 dropdown-center"
+            style="padding: 0px !important;"
+          >
+            <!-- Dropstart Language Switcher -->
+
+            <div
+              type="button"
+              class="dropdown-toggle dropdown-item d-flex align-items-center gap-2 menu-dropdown"
+              data-bs-toggle="dropdown"
+              aria-expanded="false"
+            >
+              <i class="bi bi-globe"></i>
+              {{ "HEADER.LANGUAGE" | translate }}
+            </div>
+            <ul
+              class="dropdown-menu"
+              style="left: 10px; background-color: var(--active);"
+            >
+              <li>
+                <a
+                  class="dropdown-item"
+                  href="#"
+                  [class.active]="lang.currentLang === 'en'"
+                  (click)="lang.switchLang('en')"
+                >
+                  {{ "HEADER.ENGLISH" | translate }}
+                </a>
+              </li>
+              <li>
+                <a
+                  class="dropdown-item"
+                  href="#"
+                  [class.active]="lang.currentLang === 'ar'"
+                  (click)="lang.switchLang('ar')"
+                >
+                  {{ "HEADER.ARABIC" | translate }}
+                </a>
+              </li>
+            </ul>
+          </li>
+          <li>
+            <a
+              class="dropdown-item d-flex align-items-center gap-2"
+              routerLink="/host"
+            >
+              <i class="bi bi-house-door-fill"></i>{{ "HEADER.AIRBNB_YOUR_HOME"
+              | translate }}
+            </a>
+          </li>
+
+          <li>
+            <a
+              class="dropdown-item d-flex align-items-center gap-2"
+              routerLink="/help"
+            >
+              <i class="bi bi-question-circle"></i>
+              {{ "HEADER.HELP" | translate }}
+            </a>
+          </li>
+        </ul>
+      </div>
     </div>
   </div>
   <!-- </nav> -->
