--- a/src/app/components/host-header/host-header.html
+++ b/src/app/components/host-header/host-header.html
@@ -24,7 +24,7 @@
       </li>
       <li>
         <a
-          routerLink="availability"
+          routerLink="/availability"
           routerLinkActive="active"
           [routerLinkActiveOptions]="{ exact: true }"
           >Calendar</a
@@ -32,7 +32,7 @@
       </li>
       <li>
         <a
-          routerLink="listing"
+          routerLink="/host"
           routerLinkActive="active"
           [routerLinkActiveOptions]="{ exact: true }"
           >Listings</a
@@ -40,7 +40,7 @@
       </li>
       <li>
         <a
-          routerLink="Messages"
+          routerLink="/Messages"
           routerLinkActive="active"
           [routerLinkActiveOptions]="{ exact: true }"
           >Messages</a
