--- a/src/app/pages/booking/property-bookings/property-bookings.html
+++ b/src/app/pages/booking/property-bookings/property-bookings.html
@@ -1,5 +1,4 @@
-<app-header></app-header>
-
+<app-hostheader></app-hostheader>
 <div class="bookings-container">
   <div class="bookings-header">
     <h1 class="page-title">Property Reservations</h1>
