--- a/src/app/components/host-properties/host-properties.html
+++ b/src/app/components/host-properties/host-properties.html
@@ -1,4 +1,7 @@
 <!-- Loading State -->
+
+<app-hostheader></app-hostheader>
+
 <div *ngIf="isLoading" class="loading-container">
   <div class="loading-spinner"></div>
   <p class="loading-text">Loading your properties...</p>
