--- a/src/app/app.html
+++ b/src/app/app.html
@@ -3,3 +3,5 @@
 <app-register></app-register>
 <router-outlet></router-outlet>
 <app-confirm></app-confirm>
+
+<app-signalr-test></app-signalr-test>
